# lab04-sem-2

./: CMakeLists.txt  README.md  script
formatter_ex_lib/: CMakeList.txt  CMakeLists.txt
formatter_lib/: CMakeList.txt  CMakeLists.txt
hello_world_application/: CMakeList.txt  CMakeLists.txt
solver_application/: CMakeList.txt  CMakeLists.txt
solver_lib/: CMakeList.txt
